syntax = "proto3";
package types;

option go_package = "github.com/sisu-network/sisu/x/sisu/types";

enum TxOutType {
  TRANSFER_OUT = 0;
}

message TxOutMsg {
  string signer = 1;
  TxOut data = 2;
}

message TxOut {
  TxOutType txType = 1;
  TxOutContent content = 2;
  TxOutInput input = 3;
}

message TxOutContent {
  string outChain = 1;
  string outHash = 2; // Id that identifies the txOut in the outChain

  repeated string inHashes = 3;
  bytes outBytes = 4;
}

message TxOutInput {

}

// TxOut with and full transaction hash (including signature) to look up TxOut when a new tx comes in.
message TxOutSig {
  string chain = 1;
  string hashWithSig = 2;
  string hashNoSig = 3;
}

message TxOutConfirmMsg {
  string signer = 1;
  TxOutConfirm data = 2;
}

message TxOutConfirm {
  string outChain = 1;
  string outHash = 2;
  int64 blockHeight = 3;
  int64 nonce = 4;
}
