syntax = "proto3";
package types;

message TxOut {
  string signer = 1;
  string inChain = 2;
  string outChain = 3;
  int64 inBlockHeight = 4;
  string inHash = 5;
  bytes outBytes = 6;
}